syntax = "proto3";

package playhouse.protocol;

//import "proto/common.proto";

message HeaderMsg {
  int32 service_id = 1;
  string msg_id = 2;
  int32 msg_seq = 3;
  int32 error_code = 4;
  int64 stageId = 5;
}
message RouteHeaderMsg {
  HeaderMsg header_msg = 1;
  int64 sid = 2;
  bool is_system = 3;
  bool is_reply = 4;
  bool is_base = 5;
  bool is_backend = 6;
  int64 stage_id = 7;
  int64 account_id = 8;
}

message RoutePacketMsg {
  RouteHeaderMsg route_header_msg = 1;
  bytes message = 2;
}

message ServerInfoMsg{
  string service_type = 1;
  int32  service_id = 2;
  string endpoint = 3;
  string server_state = 4;
  int64 timestamp = 5;
  int32 actor_count = 6;
  int32 nid = 7;
}

message AuthenticateMsgReq {
  int32 service_id = 1;
  int64 account_id = 2;
  int32 apiNid = 3;
}

message AuthenticateMsgRes {
  
}

message SessionCloseMsg {
}

message DisconnectNoticeMsg {
}

message RemoteIpReq {
}
message RemoteIpRes {
    string ip = 1;
}

//////////////// for room service //////////////////////////
message CreateJoinStageReq {
  string stageType = 1;
  string create_payload_id = 2;
  bytes create_payload = 3;
  string join_payload_id =4;
  bytes join_payload = 5;
  int32 sessionNid = 6;
  int64 sid = 7;
}

message CreateJoinStageRes {
  bool isCreated =1;
  string create_payload_id = 2;
  bytes create_payload = 3;
  string join_payload_id =4;
  bytes join_payload = 5;
}

message CreateStageReq {
  string stage_type = 1;
  string payload_id = 2;
  bytes payload = 3;
}

message CreateStageRes {
  string payload_id = 1;
  bytes payload = 2;
}

message JoinStageReq {
  int32 sessionNid = 1;
  int64 sid = 2;
  string payload_id = 3;
  bytes payload = 4;
}

message JoinStageRes {
  string payload_id = 1;
  bytes payload = 2;
}

message JoinStageInfoUpdateReq{
  int32 playNid = 1;
  int64 stage_id = 2;
}
message JoinStageInfoUpdateRes{
}
message LeaveStageMsg {
  int64 stage_id = 1;
}


message DeleteStageReq {
  string payload_id = 1;
  bytes payload = 2;
}

message DeleteStageRes {
  string payload_id = 1;
  bytes payload = 2;
}
message SessionClose {
  string session_id = 1;
}
message TimerMsg {
  enum Type{
    REPEAT = 0;
    COUNT = 1 ;
    CANCEL = 2;
  }
  Type type = 1;
  int64 initial_delay = 3;
  int64 period = 4;
  int32 count = 5;
}

message StageTimer {}


message ForceLeaveStage {
}
message DestroyStage {
}

message AsyncBlock {
}

